# senzil-django-oidc-provider

./: .gitignore  AUDIENCE_CORRECT_IMPLEMENTATION.md  AUDIENCE_DOMAIN_GUIDE.md  AUDIENCE_FINAL_SUMMARY.txt  AUDIENCE_IMPLEMENTATION_CHECKLIST.txt  AUDIENCE_STANDARDS_COMPLIANCE.md  BRANCH_STATUS.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.txt  COMMIT_MESSAGE.txt  COMPLETE_AUDIENCE_IMPLEMENTATION.md  CONTRIBUTING.md  CREATE_PR_INSTRUCTIONS.md  CUSTOM_CLIENT_MODEL_MERGE_GUIDE.md  DYNAMIC_CLIENT_REGISTRATION.md  FINAL_PR_SUMMARY.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_SUMMARY.md  JWT_CLAIMS_CHECKLIST.txt  MANIFEST.in  MASTER_IMPLEMENTATION_SUMMARY.md  MERGE_STRATEGY.md  MODERNIZATION.md  PACKAGE_READY.md  PKG-INFO  PROJECT_COMPLETION_SUMMARY.txt  PROJECT_FINAL_STATE.txt  PR_DESCRIPTION.md  QUICK_START.md  README.md  README_MODERNIZATION.md  SQUASH_MERGE_SUMMARY.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_oidc_provider.sh
docs/: README.md  algorithms-encryption.md  client-registration.md  configuration.md  consent.md  customization.md  endpoints.md  examples.md  installation.md  jwt-claims.md  migration.md  models.md  oidc-flows.md  origin-security.md  passkeys.md  refresh-tokens.md  security.md  settings.md
docs/archive/: ALLOWED_DOMAINS_GUIDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_COMPLETE_SUMMARY.md  FINAL_SUMMARY.md  JWT_CLAIMS_IMPLEMENTATION_SUMMARY.md  ORIGIN_IMPLEMENTATION_SUMMARY.md  README_COMPLETE.md  REFRESH_TOKEN_IMPLEMENTATION.md  UPGRADE_GUIDE.md
oidc_provider/: admin.py  admin_passkey.py  middleware_origin.py  middleware_security.py  models.py  models.py.conflict  urls.py  urls_passkey.py  views.py  views_consent.py  views_registration.py
oidc_provider/lib/utils/: common.py  oauth2.py  token.py
oidc_provider/management/commands/: createeckey.py
oidc_provider/migrations/: 0029_add_modern_algorithms_and_encryption.py  0029_alter_client_owner_alter_client_response_types_and_more.py  0029_client_company.py  0030_add_refresh_token_customization.py  0030_remove_client_company_alter_client_owner_and_more.py  0031_add_passkey_support.py  0032_add_allowed_domains.py
oidc_provider/templates/oidc_provider/: consent.html  consent_detail.html  consent_list.html  passkey_settings.html
oidc_provider/tests/: test_all_flows.py  test_audience_domain.py  test_client_registration.py  test_jwt_claims.py  test_origin_allowed_validation.py  test_origin_validation.py  test_passkey.py
oidc_provider/tests/app/: utils.py
oidc_provider/tests/cases/: test_middleware.py  test_utils.py
