[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senzil-django-oidc-provider"
dynamic = ["version"]
description = "Modern OpenID Connect Provider implementation for Django with passkeys, advanced security, and standards compliance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Juan Ignacio Fiorentino", email = "juanifioren@gmail.com"},
]
maintainers = [
    {name = "Senzil Team"},
]
keywords = [
    "django",
    "oidc",
    "openid-connect",
    "oauth2",
    "authentication",
    "authorization",
    "sso",
    "passkey",
    "webauthn",
    "fido2",
    "jwt",
    "jwe",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=3.2",
    "authlib>=1.3.0",
    "cryptography>=41.0.0",
    "pycryptodomex>=3.19.0",
]

[project.optional-dependencies]
passkey = [
    "webauthn>=2.0.0",
    "cbor2>=5.4.0",
]
cors = [
    "django-cors-headers>=4.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "django-stubs>=4.2.0",
]
all = [
    "senzil-django-oidc-provider[passkey,cors]",
]

[project.urls]
Homepage = "https://github.com/senzil/senzil-django-oidc-provider"
Documentation = "https://github.com/senzil/senzil-django-oidc-provider/blob/main/docs/README.md"
Repository = "https://github.com/senzil/senzil-django-oidc-provider.git"
Issues = "https://github.com/senzil/senzil-django-oidc-provider/issues"
Changelog = "https://github.com/senzil/senzil-django-oidc-provider/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["oidc_provider"]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "oidc_provider.version.__version__"}

[tool.setuptools.package-data]
oidc_provider = [
    "static/**/*",
    "templates/**/*",
    "locale/**/*",
    "tests/templates/**/*",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
testpaths = ["oidc_provider/tests"]
addopts = [
    "--cov=oidc_provider",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "migrations/",
    "tests/",
]

[tool.coverage.run]
source = ["oidc_provider"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
