[metadata]
name = senzil-django-oidc-provider
author = Juan Ignacio Fiorentino
author_email = juanifioren@gmail.com
maintainer = Senzil Team
license = MIT
license_files = LICENSE
description = Modern OpenID Connect Provider implementation for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senzil/senzil-django-oidc-provider
project_urls =
    Documentation = https://github.com/senzil/senzil-django-oidc-provider/blob/main/docs/README.md
    Source = https://github.com/senzil/senzil-django-oidc-provider
    Tracker = https://github.com/senzil/senzil-django-oidc-provider/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Security

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    example*

[flake8]
max-line-length = 100
exclude = 
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    build,
    dist,
    migrations,
    .venv,
    venv
ignore = E203, E266, E501, W503
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
profile = black
line_length = 100
skip = migrations
